p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app1

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app1


  template:
    metadata:
      labels:
        app: app1


    spec:
      containers:
        - name: app1
          image: hashicorp/http-echo:1.0.0
          args:
            - "-text=Hello from app1"
          ports:
            - containerPort: 5678
---

apiVersion: v1
kind: Service

metadata:
  name: app1

spec:
  type: ClusterIP

  selector:
    app: app1

  ports:
    - port: 80
      targetPort: 5678
