p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: apps

spec:
  ingressClassName: traefik

  rules:
    - host: app1.com
      http:
        paths:
         -  path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80
